[package]
name = "staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.25.0"
anchor-spl = "^0.25.0"
mpl-token-metadata = {version="^1.3.4",  features = [ "no-entrypoint" ]}
solana-program = "~1.10.29"
spl-token = "~3.3.0"
